force-app/main/default/objects/Enrollment__c/Enrollment__c.object-meta.xml
<CustomObject>
    <description>Join object that links students to courses and tracks progress.</description>
    <label>Enrollment</label>
    <pluralLabel>Enrollments</pluralLabel>
    <nameField>
        <displayFormat>ENR-{0000}</displayFormat>
        <label>Enrollment</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>