force-app/main/default/objects/Enrollment__c/fields/Progress__c.field-meta.xml
<CustomField>
    <fullName>Progress__c</fullName>
    <description>Percent completion for the enrollment.</description>
    <label>Progress %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>