force-app/main/default/objects/Enrollment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Student__c</columns>
    <columns>Course__c</columns>
    <columns>Status__c</columns>
    <columns>Progress__c</columns>
    <columns>Enrollment_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>